--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@kitajs/html": "3.0.8",
+    "@kitajs/ts-html-plugin": "1.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "better-sqlite3": "9.1.1",
     "kysely": "0.26.3",
     "nestjs-kysely": "0.1.6",
-    "nestjs-tsx-views": "1.2.6",
-    "react": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -38,25 +38,24 @@
     "@types/better-sqlite3": "7.6.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "20.9.2",
-    "@types/react": "18.2.37",
+    "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "prisma": "5.6.0",
+    "prisma-kysely": "1.7.1",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "5.6.0",
-    "prisma-kysely": "1.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.2.2"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
